--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,4 @@
+@import url('../components/assets/font/CircularXX.css');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -69,7 +70,7 @@
 @layer base {
   * {
     @apply border-border;
-    font-family: "CircularXX", sans-serif;
+    font-family: 'CircularXX', sans-serif;
   }
   body {
     @apply bg-background text-foreground;
